Fixes Contrast

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #524a37;
   margin: 0;
   padding: 0;
+  color: rgb(255, 255, 255);
 }
 
 h1,
@@ -11,7 +12,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .container {
@@ -61,11 +62,13 @@ form textarea {
 
 form button {
   background: none;
-  border: 2px solid black;
+  border: 2px solid rgb(255, 255, 255);
   padding: 1rem;
   text-transform: uppercase;
+  color: rgb(255, 255, 255);
 }
 
 .site-footer {
   padding: 2rem 0;
 }
+
